# nBIMS

./: .gitignore  CMakeLists.txt  README.md
src/forwardSolver/bisectionMesh/: CMakeLists.txt  ChannelCppSolverBiMesh.cpp  ChannelCppSolverBiMesh.h  turbSolver.cpp  turbSolver.h
src/forwardSolver/bisectionMesh/archeive/: ChannelCppSolverBiMesh.h
src/forwardSolver/cavityFlow/: CMakeLists.txt  cavityFlowCase.h  cavityFlowSolver.cpp  cavityFlowSolver.h
src/forwardSolver/cavityFlow/solutions/: u000000.vtu
src/forwardSolver/cavityFlow/ufl/: cavityFlow.h  cavityFlow.ufl
src/forwardSolver/channelFlow/: CMakeLists.txt  ChannelCppSolverBiMesh.cpp  ChannelCppSolverBiMesh.h  turbSolver.cpp  turbSolver.h
src/forwardSolver/channelFlowAdjoint/: CMakeLists.txt  ChannelCppSolverBiMesh.h  turbSolverAdjoint.cpp  turbSolverAdjoint.h
src/forwardSolver/channelFlowAdjoint/archeive/: ChannelCppSolverBiMesh.cpp
src/forwardSolver/elasticMixed2d/: CMakeLists.txt  elasticMixed2d.cpp  elasticMixed2d.h
src/forwardSolver/elasticMixed2dRT/: CMakeLists.txt  MixedPoisson.h  MixedPoisson.ufl  Obs.h  Obs.ufl  Qoi.h  elasticMixed2dRT.cpp  elasticMixed2dRT.h
src/forwardSolver/navierstokes2d/: CMakeLists.txt  nse2d.cpp  nse2d.h  nse2dCN.cpp  nse2dCN.h  nse2dCNDir.cpp  nse2dCNDir.h  nse2dDir.cpp  nse2dDir.h  nse2dLag.cpp  nse2dLag.cppwip  nse2dLag.h  nse2d_IC_f.cpp  nse2d_IC_f.h  nse2d_Lag.cpp  nse2d_Lag.h  nse2d_PETSC_FE.cpp  nse2d_PETSC_FE.h  nseIC.h  nseforcing.h
src/forwardSolver/stokes/: CMakeLists.txt  CMakeListsCUDAVersion.txt  CMakeListsDolfinVersion.txt  FEModule.cpp  FEModule.h  GPU_batch.sh  batch.sh  log  mlmcmc_config.txt  plainMCMClog  plainmcmc_finalOutput  reference.out  run.sh  stokes_10.cpp  stokes_Q1isoQ2_adjoint_H1error.cpp  stokes_v1-1.cpp  stokes_v2.cpp  testSolve
src/forwardSolver/stokes/A2/: finalOutput  finalOutput_L1  finalOutput_L5  finalOutput_L6  finalOutput_L7
src/forwardSolver/stokes/A3/: finalOutput_L2  finalOutput_L3  finalOutput_L4  finalOutput_L5  finalOutput_L6  singularity_test.L3  singularity_test.L4
src/forwardSolver/stokes/A4/: finalOutput_L2  finalOutput_L3  finalOutput_L4  finalOutput_L5  singularity_test.L3  singularity_test.L4
src/forwardSolver/stokes/a4/: finalOutput_L2  finalOutput_L3  finalOutput_L4  singularity_test.out  singularity_test.outcopy
src/forwardSolver/stokes/archeive/: stokes_3.cpp  stokes_Q1isoQ2.cpp  stokes_Q1isoQ2_adjoint.cpp  stokes_Q1isoQ2_adjoint_H1error  stokes_Q1isoQ2_adjoint_fullprint.cpp  stokes_Q1isoQ2_adjoint_ind.cpp  stokes_Q1isoQ2_v2.cpp  stokes_adjoint.cpp  stokes_transient.cpp
src/forwardSolver/stokes/data/: 4_obs_para_1_16_wNoise  7_obs_para_10_16_wNoise  7_obs_para_1_16_wNoise
src/forwardSolver/stokes/sin/: L0usolution  L1usolution  L3usolution  L4usolution  L5usolution
src/forwardSolver/stokes/vscode-root/: Cookies  TransportSecurity  machineid  storage.json
src/forwardSolver/stokes/vscode-root/Backups/: workspaces.json
src/forwardSolver/stokes/vscode-root/Cache/: 526a8825caa06dc6_0  c85687354a0e770a_0  cbc42e4c979f69f0_0  f2b2050d41e64aab_0
src/forwardSolver/stokes/vscode-root/Cache/index-dir/: the-real-index
src/forwardSolver/stokes/vscode-root/CachedData/d5e9aa0227e057a60c82568bf31c04730dc15dcd/: AvailabilityData-a8b04c800ee33d1aefb952f21049e3b4.code  Base-4c5d4fe2dc4093c0d4b972baaa70c227.code  Channel-49edf0336af9e039b48c4f6f98c2c567.code  Channel-78ea03e096175cb51e830e69a7d5ba62.code  Client-f773b972b7851dc760028dffe2a1d8ba.code  ClientRequestParser-3e3666a216c06130669459512c7df093.code  ClientRequests-28a00f806dbf97d7f35234b7c90f9463.code  Config-06ee1aca79b70b3a834a23e728af9612.code  Config-3df194716243893ee19690857ce8e9ed.code  Console-a041d1d3c0f38f472806bf3f81efc71e.code  Console-e35515cff123d375e64dab126c721cc9.code  Constants-d25bf35b6174072b37f19541ae2da470.code  Context-6da2aacea87ffbd9ea9bdb85b5e3b0bf.code  Context-79cc1e273d8be562bccefbc790e0bb0a.code  ContextTagKeys-de1b573e6d86120cdce6c2c1027f1f18.code  Data-99dfd48ddddc88cb1bb7546bacc3ba11.code  (+209 more)
src/forwardSolver/stokes/vscode-root/CachedExtensions/: builtin  user
src/forwardSolver/stokes/vscode-root/GPUCache/: data_0  data_1  index
src/forwardSolver/stokes/vscode-root/Session Storage/: LOG
src/forwardSolver/stokes2d/: CMakeLists.txt  stokes2d.cpp  stokes2d.h  stokes2dpenalty.cpp  stokes2dpenalty.h
src/inverseSolver/MLMCMCNSE2DCN/: CMakeLists.txt  MLMCMCNSE2DCN.cpp
src/inverseSolver/MLMCMCNSE2DDirCN/: CMakeLists.txt  MLMCMCNSE2DDirCN.cpp
src/inverseSolver/MLMCMCNSE2DDirIMEX/: CMakeLists.txt  MLMCMCNSE2DDirIMEX.cpp
src/inverseSolver/MLMCMCNSE2D_IC_f/: CMakeLists.txt  MLMCMCNSE2D_IC_f.cpp
src/inverseSolver/forwardCavityFlow/: CMakeLists.txt  forwardCavityFlow.cpp
src/inverseSolver/forwardChannelFlow/: CMakeLists.txt  forwardChannelFlow.cpp
src/inverseSolver/forwardChannelFlowAdjoint/: CMakeLists.txt  inverseSolver.cpp
src/inverseSolver/forwardJetFlow/: CMakeLists.txt  forwardJetFlow.cpp
src/inverseSolver/mlmcmcElasticMixed/: CMakeLists.txt  mlmcmcElasticMixed.cpp
src/inverseSolver/mlmcmcMixedPoisson/: CMakeLists.txt  mlmcmcMixedPoisson.cpp
src/inverseSolver/mlmcmcMixedPoissonPEERS/: CMakeLists.txt  mlmcmcMixedPoissonPEERS.cpp
src/inverseSolver/mlmcmcNSE2dLag/: .mlmcmcNSE2dLag.cpp.swp  CMakeLists.txt  mlmcmcNSE2dLag.cpp
src/inverseSolver/mlmcmcNSE2dPetscFE/: CMakeLists.txt  mlmcmcNSE2dPetscFE.cpp
src/inverseSolver/mlmcmcNSE2d_lag/: CMakeLists.txt  mlmcmcNSE2d_lag.cpp
src/inverseSolver/mlmcmcStokes2D/: CMakeLists.txt  mlmcmcStokes2D.cpp
src/inverseSolver/mlmcmcStokes2Dpenalty/: CMakeLists.txt  mlmcmcStokes2Dpenalty.cpp
src/inverseSolver/stochasticNewtonChannelFlow/: CMakeLists.txt  stochasticNewtonChannelFlow.cpp
src/inverseSolver/stochasticNewtonChannelFlowMultiLevel/: CMakeLists.txt  stochasticNewtonChannelFlowMultiLevel.cpp
src/inverseSolver/stochasticNewtonChannelFlowMultiLevel/solverInterface/: CMakeLists.txt
src/inverseSolver/stochasticNewtonJetFlow/: CMakeLists.txt  stochasticNewtonJetFlow.cpp
src/inverseSolver/stochasticNewtonJetFlowMultiLevel/: CMakeLists.txt  inverseSolver.cpp
(+671 files in other folders)
