cmake_minimum_required(VERSION 3.10)

project(MCMC4LargeScalePDE)

cmake_policy(SET CMP0004 NEW)
add_compile_options(-O3 -W -Wall -Werror -g) 
# add_compile_options(-O3 -W -Wall -g) 

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_PREFIX_PATH /usr/local:${CMAKE_PREFIX_PATH})
set(CMAKE_CXX_FLAGS "-Wno-unused-parameter ${CMAKE_CXX_FLAGS}")

#include_directories(/usr/local/include/adolc)
include_directories(/usr/local/lib/python3.6/dist-packages/ffc/backends/ufc)
include_directories(/usr/local/petsc-32/lib)

find_package(GSL REQUIRED)
include_directories(${GSL_INCLUDE_DIRS})
find_package(Eigen3 3.3 REQUIRED NO_MODULE)
include_directories(${EIGEN3_INCLUDE_DIRS})
find_package(DOLFINX REQUIRED)

# find_package(MPI REQUIRED)

find_package(PkgConfig REQUIRED)
# set(ENV{PKG_CONFIG_PATH} /usr/local/petsc-32/lib/pkgconfig/:/usr/local/lib/pkgconfig/:$ENV{PKG_CONFIG_PATH})
# pkg_search_module(DOLFINX REQUIRED dolfinx)
# pkg_search_module(PETSC REQUIRED PETSc)
#include(${DOLFIN_USE_FILE})

#add_subdirectory(include/LBFGS/include)
add_subdirectory(src/tool/IO)
add_subdirectory(src/tool/numericalRecipes)
add_subdirectory(src/tool/FEModule)
#add_subdirectory(src/tool/BFGSSolver)

#add_subdirectory(src/forwardSolver/dnsDataInterpreter)
#add_subdirectory(src/forwardSolver/bisectionMesh)
#add_subdirectory(src/forwardSolver/channelFlowAdjoint)
#add_subdirectory(src/forwardSolver/jetFlow)
#add_subdirectory(src/forwardSolver/cavityFlow)
add_subdirectory(src/forwardSolver/navierstokes2d)
add_subdirectory(src/forwardSolver/stokes2d)
add_subdirectory(src/forwardSolver/elasticMixed2d)
add_subdirectory(src/forwardSolver/elasticMixed2dRT)

add_subdirectory(src/mcmcLib)
#add_subdirectory(src/mcmcVersions/mcmcCore)
#add_subdirectory(src/mcmcVersions/multiLevelMCMC/oneHierachical)
#add_subdirectory(src/mcmcVersions/plainMCMC)
#add_subdirectory(src/mcmcVersions/stochasticNewtonMCMC)
#add_subdirectory(src/mcmcVersions/multiLevelMCMC/biHierachical)

add_subdirectory(src/inverseSolver/MLMCMCNSE2D)
# add_subdirectory(src/inverseSolver/MLMCMCNSE2D_IC_f)
# add_subdirectory(src/inverseSolver/MLMCMCNSE2DCN)
# add_subdirectory(src/inverseSolver/MLMCMCNSE2DDirIMEX)
# add_subdirectory(src/inverseSolver/MLMCMCNSE2DDirCN)
add_subdirectory(src/inverseSolver/mlmcmcStokes2D)
add_subdirectory(src/inverseSolver/mlmcmcStokes2Dpenalty)
add_subdirectory(src/inverseSolver/mlmcmcMixedPoisson)
add_subdirectory(src/inverseSolver/mlmcmcMixedPoissonPEERS)
#add_subdirectory(src/inverseSolver/solverInterface)
#add_subdirectory(src/inverseSolver/forwardChannelFlow)
#add_subdirectory(src/inverseSolver/forwardChannelFlowAdjoint)
#add_subdirectory(src/inverseSolver/forwardJetFlow)
#add_subdirectory(src/inverseSolver/forwardCavityFlow)
#add_subdirectory(src/inverseSolver/stochasticNewtonJetFlowMultiLevel)
#add_subdirectory(src/inverseSolver/stochasticNewtonChannelFlowMultiLevel)
#add_subdirectory(src/inverseSolver/stochasticNewtonChannelFlow)
#add_subdirectory(src/inverseSolver/stochasticNewtonJetFlow)
